# datasette-explain

./: README.md  pyproject.toml  setup.py
datasette_explain/: __init__.py
tests/: test_explain.py
